--- a/UGV-PICO/CMakeLists.txt
+++ b/UGV-PICO/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable(ugv_firm
 # add_library(motor_control ${PROJECT_SOURCE_DIR}/lib/MotorControl.cpp ${PROJECT_SOURCE_DIR}/lib/MotorControl.hpp)
 
 # Pull in our pico_stdlib which pulls in commonl
-target_link_libraries(ugv_firm pico_stdlib pico_multicore hardware_uart hardware_irq pico_stdio_usb hardware_pwm)
+target_link_libraries(ugv_firm pico_stdlib pico_multicore hardware_uart hardware_irq pico_stdio_usb hardware_pwm hardware_gpio pico_time)
 
 # Enable/Disable usb/uart standard output (1 for enable, 0 for disable)
 # Serial default baud: 115200
