Odometry written, needs more tests

--- a/UGV-PICO/lib/DiffDriveOdom/CMakeLists.txt
+++ b/UGV-PICO/lib/DiffDriveOdom/CMakeLists.txt
@@ -1,5 +1,7 @@
-# find_package(Eigen3 3.3 REQUIRED NO_MODULE)
-# include_directories("/usr/include")
+
 add_library(diff_drive_odom DifferentialDriveOdometry.hpp DifferentialDriveOdometry.cpp)
 
-target_link_libraries(diff_drive_odom)
+find_package(Eigen3 REQUIRED NO_MODULE)
+include_directories(${EIGEN3_INCLUDE_DIR})
+
+target_link_libraries(diff_drive_odom Eigen3::Eigen )
