--- a/UGV-PICO/lib/DiffDriveBase/DiffDriveOdom/CMakeLists.txt
+++ b/UGV-PICO/lib/DiffDriveBase/DiffDriveOdom/CMakeLists.txt
@@ -2,6 +2,6 @@
 add_library(diff_drive_odom DifferentialDriveOdometry.hpp DifferentialDriveOdometry.cpp)
 
 find_package(Eigen3 REQUIRED NO_MODULE)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include_directories(${EIGEN3_INCLUDE_DIR} ../GeometryUtils)
 
-target_link_libraries(diff_drive_odom Eigen3::Eigen )
+target_link_libraries(diff_drive_odom Eigen3::Eigen geometry_utils)
