--- a/UGV-PICO/lib/DiffDriveBase/PIDController/CMakeLists.txt
+++ b/UGV-PICO/lib/DiffDriveBase/PIDController/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(pid_controller PIDController.hpp PIDController.cpp)
+include_directories(../GeometryUtils)
 
-target_link_libraries(pid_controller)
+target_link_libraries(pid_controller geometry_utils)
