--- a/UGV-PICO/CMakeLists.txt
+++ b/UGV-PICO/CMakeLists.txt
@@ -14,8 +14,8 @@ pico_sdk_init()
 # add_subdirectory(lib/PICO_BMX160)
 # add_subdirectory(lib/PIDController)
 # add_subdirectory(lib/DiffDriveOdom)
-add_subdirectory(lib/DiffDriveBase)
 add_subdirectory(lib/GeometryUtils)
+add_subdirectory(lib/DiffDriveBase)
 
 add_executable(ugv_firm
 	main.cpp
@@ -24,7 +24,7 @@ add_executable(ugv_firm
 
 
 # Pull in our pico_stdlib which pulls in commonl
-target_link_libraries(ugv_firm pico_stdlib pico_multicore pico_stdio_usb hardware_uart hardware_irq hardware_i2c hardware_pwm hardware_gpio pico_time pico_sync diff_drive geometry_utils )
+target_link_libraries(ugv_firm pico_stdlib pico_multicore pico_stdio_usb hardware_uart hardware_irq hardware_i2c hardware_pwm hardware_gpio pico_time pico_sync geometry_utils diff_drive  )
 
 # Enable/Disable usb/uart standard output (1 for enable, 0 for disable)
 # Serial default baud: 115200
