--- a/UGV-PICO/lib/GeometryUtils/CMakeLists.txt
+++ b/UGV-PICO/lib/GeometryUtils/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(geometry_utils GeometryUtils.hpp GeometryUtils.cpp)
 
-# target_link_libraries(geometry_utils)
+target_link_libraries(geometry_utils)
